home page desktop

--- a/#src/from-germany.html
+++ b/#src/from-germany.html
@@ -2143,7 +2143,7 @@
                     <span class="docs__arrow">&#8963;</span>
                 </div>
                 <h4 class="docs__sub-title">Примеры заполнения документов</h4>
-                <div class="slider">
+                <div class="docs-slider">
                         <a class='docs__slider-item-link' href="example-docs/1kuplya-prodajha.pdf" target="blank">
                             <img class="docs__img" src="img/car-1.jpg" alt="#">
                             <span>Договор купли-продажи</span>
