home page desktop

--- a/#src/index.html
+++ b/#src/index.html
@@ -718,7 +718,7 @@
                         <div class="geography__list-wrap">
                             <ul class="geography__list">
                                 <li class="geography__item">
-                                    <a class="geography__link" href="#">
+                                    <a class="geography__link" href='from-germany.html'>
                                         Германия
                                     </a>
                                 </li>
