--- a/index.html
+++ b/index.html
@@ -613,6 +613,7 @@
         </header>
 
         <section class="welcome" id="welcome">
+            <img class="welcome__img-mobile" src="img/home/mobile/img_ship.jpg" alt="#">
             <div class="container">
                 <div class="welcome__text-wrap">
                     <h1 class="welcome__title">Международные грузоперевозки</h1>
@@ -654,7 +655,7 @@
                         <a href="#" class="about-us__link">Узнать подробнее</a>
                     </div>
                     <div class="about-us__box">
-                        <h4 class="about-us__sub-title">Морские грузоперевозки</h4>
+                        <h4 class="about-us__sub-title">Морские </br> грузоперевозки</h4>
                         <img class="about-us__icon" src="img/home/img_train.svg" alt="#">
                         <a href="#" class="about-us__link">Узнать подробнее</a>
                     </div>
