--- a/#src/calculator.html
+++ b/#src/calculator.html
@@ -236,6 +236,23 @@
                             <li><a href="#">About</a></li>
                             
                         </ul>
+                        <ul class="header__socials">
+                                <li href="#" class="header__social-link">
+                                    <a class="header__soc-facebook"></a>
+                                </li> 
+                                <li href="#" class="header__social-link">
+                                    <a href="#"  class="header__soc-youtube"></a>
+                                </li>
+                                <li href="#" class="header__social-link">
+                                    <a href="#" class="header__soc-inst"></a>
+                                </li> 
+                                <li href="#" class="header__social-link">
+                                    <a href="#" class="header__soc-twitter"></a>
+                                </li>
+                                <li href="#" class="header__social-link">
+                                    <a href="#" class="welcome__soc-google-plus"></a>
+                                </li>
+                            </ul>
                         </nav>
                         <div class="header__contacts">
                             <div class="header__email">
