--- a/#src/from-germany.html
+++ b/#src/from-germany.html
@@ -111,7 +111,7 @@
                                                 <li><a class="chile" href="#">Чили</a></li>
                                                 <li><a class="peru" href="#">Перу</a></li>
                                                 <li><a class="uruguay" href="#">Уругвай</a></li>
-                                                <li><a class="brazil" href="#">Бразилия</a></li>
+                                                <li><a class="flag--brazil" href="#">Бразилия</a></li>
                                             </ul>
                                         </li>
                                     </ul>
