--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 	<meta name="description" content="международная перевозка грузов" />
     <meta name="robots" content="all"/>
 
-    <link rel="stylesheet" type="text/css" href="css/country.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 
 	<title>Global Expeditors</title>
@@ -515,19 +514,19 @@
                 </div>
             </div>
             <ul class="welcome__socials">
-                <li href="#" class="welcome__social-link">
-                    <a class="welcome__soc-facebook"></a>
+                <li class="welcome__social-link">
+                    <a href="#"  class="welcome__soc-facebook"></a>
                 </li> 
-                <li href="#" class="welcome__social-link">
+                <li class="welcome__social-link">
                     <a href="#"  class="welcome__soc-youtube"></a>
                 </li>
-                <li href="#" class="welcome__social-link">
+                <li class="welcome__social-link">
                     <a href="#" class="welcome__soc-inst"></a>
                 </li> 
-                <li href="#" class="welcome__social-link">
+                <li class="welcome__social-link">
                     <a href="#" class="welcome__soc-twitter"></a>
                 </li>
-                <li href="#" class="welcome__social-link">
+                <li class="welcome__social-link">
                     <a href="#" class="welcome__soc-google-plus"></a>
                 </li>
             </ul>
