--- a/#src/header.html
+++ b/#src/header.html
@@ -495,8 +495,7 @@
                 </div>
         </header>
 
-        <div class="demo"></div>
         <script src="https://code.jquery.com/jquery-2.2.0.min.js" type="text/javascript"></script>
-    <script src="js/test.js"></script>
+    <script src="js/header.js"></script>
 </body>
 </html>
