--- a/case.html
+++ b/case.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Case Story</title>
+    <link rel="stylesheet" type="text/css" href="css/slick.css">
+    <link rel="stylesheet" type="text/css" href="css/slick-theme.css">
+    <link rel="stylesheet" href="css/country.css">
     <link rel="stylesheet" href="css/case.css">
 </head>
 <body>
@@ -499,25 +502,148 @@
             <div class="experience__top">
                 <div class="container">
                     <h1 class="experience__title">
-                        Опыт перевозок и оформления товаров
+                        Опыт перевозок и&nbsp;оформления товаров
                     </h1>
                 </div>
             </div>
             <div class="experience__bottom">
                 <div class="container">
-                    <h2 class="experience__sub-title">
-                        Проблема
-                    </h2>
-                    <p class="experience__text">
-                        На консолидационный склад в Китае поступил хрупкий груз — 
-                        хрустальные люстры для торгового центра в Самаре. 
-                        Такие грузы отправляются отдельными контейнерами, но в связи с ограничениями по срокам доставки, 
-                        груз отправили в Россию в составе сборной партии. 
-                        Для защиты груза от повреждения дополнительно была установлена деревянная обрешетка 
-                        коробок, проверена комплектность груза и целостность упаковки. 
-                        Задача стояла загрузить люстры в автомашину и доставить их в адрес грузополучателя в России, 
-                        не нарушив его целостность.
+                    <div class="experience__row">
+                        <div class="experience__text-wrap">
+                            <div class="experience__delivery">
+                                <h4 class="experience__cap">
+                                    Доставка хрупкого груза в&nbsp;составе сборного груза
+                                </h4>
+                            </div>
+                            <h2 class="experience__sub-title">
+                                Проблема
+                            </h2>
+                            <p class="experience__text">
+                                На консолидационный склад в Китае поступил хрупкий груз — 
+                                хрустальные люстры для торгового центра в Самаре. 
+                                Такие грузы отправляются отдельными контейнерами, но в связи с ограничениями по срокам доставки, 
+                                груз отправили в Россию в составе сборной партии. 
+                                Для защиты груза от повреждения дополнительно была установлена деревянная обрешетка 
+                                коробок, проверена комплектность груза и целостность упаковки. 
+                                Задача стояла загрузить люстры в автомашину и доставить их в адрес грузополучателя в России, 
+                                не нарушив его целостность.
+                            </p>
+                        </div>
+                        <img class="experience__img" src="img/case/img_warehouse.jpg" alt="#">
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="solution">
+            <div class="container">
+                <div class="solution__main-wrap">
+                    <div class="solution__img-wrap">
+                        <img class="solution__img" src="img/case/img_unloading.jpg" alt="#">
+                        <img class="solution__img hide-sm" src="img/case/img_boxes.jpg" alt="#">
+                    </div>
+                    <div class="solution__text-wrap">
+                        <h2 class="solution__title">
+                            Решение
+                        </h2>
+                        <p class="solution__text">
+                            Грузы, поступающие на наши консолидационные склады, принимаются нашими сотрудниками, 
+                            которые лично осуществляют прием, формирование сборной партии, проверку и упаковку груза. 
+                            При необходимости наши специалисты дополнительно закрепят специальными фиксирующими приспособлениями, 
+                            которые обеспечат неподвижность, уберегут от падения и ударов в пути.
+                        </p>
+                        <h5 class="solution__list-title">
+                            Что входит в проверку груза на складе?
+                        </h5>
+                        <ul class="solution__list">
+                            <li class="solution__item"> установка дополнительной обрешетки,</li>
+                            <li class="solution__item"> проверка груза на целостность упаковки,</li>
+                            <li class="solution__item"> проверка упаковки на отсутствие повреждения,</li>
+                            <li class="solution__item"> фиксирование габаритных размеров,</li>
+                            <li class="solution__item"> взвешивание груза</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="crm">
+            <div class="container">
+                <div class="crm__wrap">
+                    <p class="crm__text">
+                        Был запущен бизнес-процесс в CRM системе который позволял отслеживать все этапы, 
+                        проверки, взвешивания, измерения, упаковки и загрузки, сопровождаемый фотоотчётами, 
+                        которые отправлялись клиенту.
                     </p>
+                    <div class="crm__img-wrap">
+                        <img class="crm__img" src="img/case/img_program.jpg" alt="#">
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="result">
+            <div class="container">
+                <div class="result__main-wrap">
+                    <img class="result__img" src="img/case/img_cargo.jpg" alt="#">
+                    <div class="result__text-wrap">
+                        <h2 class="result__title">
+                            Результат
+                        </h2>
+                        <p class="result__text">
+                            Хрупкий груз из Китая доставили клиенту в срок без повреждений и дополнительных затрат.
+                            Клиент был информирован о каждом этапе перевозке своего товара, 
+                            благодаря ежедневной оперативной информации менеджеров
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="contact-slider">
+                <div class="about__quote result__quote">
+                    <div class="container">
+                        <div class="about__row about__row--2">
+                            <div class="about__contact-card">
+                                <h5 class="about__sub-title">Обращайтесь за&nbsp;консультацией</h5>
+                                <p class="about__manager-name">
+                                    Иванов Иван
+                                </p>
+                                <p class="about__position">
+                                    Руководитель отдела продаж
+                                </p>
+                                <a href="tel:+78002227537" class="about__tel">
+                                    <span>8&nbsp;800&nbsp;222&nbsp;75&nbsp;37</span>
+                                </a>
+                                <a href="#" class="about__mail">
+                                    <span>info@abxterminal.ru</span>
+                                </a>
+                            </div>
+                            <div class="about__author-wrap">
+                                <img class="about__img-manager" src="img/atar.jpg" alt="#">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="about__quote result__quote">
+                    <div class="container">
+                        <div class="about__row about__row--2">
+                            <div class="about__contact-card">
+                                <h5 class="about__sub-title">Обращайтесь за&nbsp;консультацией</h5>
+                                <p class="about__manager-name">
+                                    Никифирова Пелогея
+                                </p>
+                                <p class="about__position">
+                                    Руководитель отдела продаж
+                                </p>
+                                <a href="tel:+78002227537" class="about__tel">
+                                    <span>8&nbsp;800&nbsp;222&nbsp;75&nbsp;37</span>
+                                </a>
+                                <a href="#" class="about__mail">
+                                    <span>nikifirova-group.ru</span>
+                                </a>
+                            </div>
+                            <div class="about__author-wrap">
+                                <img class="about__img-manager" src="img/girl.jpg" alt="#">
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
@@ -568,7 +694,11 @@
     </footer>
 
 
-    <script src="js/jquery-3.6.0.js"></script>
+    <script src="https://code.jquery.com/jquery-2.2.0.min.js" type="text/javascript"></script>
+    <script src="js/slick.js" type="text/javascript" charset="utf-8"></script>
+  
+    <!-- <script src="js/jquery-3.6.0.js"></script> -->
     <script src="js/header.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
