--- a/contacts.html
+++ b/contacts.html
@@ -529,20 +529,14 @@
                        </div>
                         <ul class="socials contacts__socials">
                             <li href="#" class="socials__item">
-                                <a class="socials__link socials__link--facebook"></a>
+                                <a class="socials__link socials__link--telegram-color"></a>
                             </li> 
                             <li href="#" class="socials__item">
-                                <a href="#"  class="socials__link socials__link--youtube"></a>
+                                <a href="#"  class="socials__link socials__link--whatsup-color"></a>
                             </li>
                             <li href="#" class="socials__item">
-                                <a href="#" class="socials__link socials__link--inst"></a>
+                                <a href="#" class="socials__link socials__link--viber-color"></a>
                             </li> 
-                            <li href="#" class="socials__item">
-                                <a href="#" class="socials__link socials__link--twitter"></a>
-                            </li>
-                            <li href="#" class="socials__item">
-                                <a href="#" class="socials__link socials__link--google-plus"></a>
-                            </li>
                         </ul>
                    </div>
                    <div class="contacts__map">
