--- a/#src/header.html
+++ b/#src/header.html
@@ -24,7 +24,7 @@
                                     <ul class="submenu">
                                         <li>
                                             <a href="#">Европа</a>
-                                            <ul class="submenu height-limit submenu--last">
+                                            <ul class="submenu height-limit">
                                                 <li><a class="flag flag--germany" href='from-germany.html'>Германия</a></li>
                                                 <li><a class="flag flag--turkey" href='#'>Турция</a></li>
                                                 <li><a class="flag flag--hungary" href='#'>Венгрия</a></li>
