--- a/#src/articles.html
+++ b/#src/articles.html
@@ -44,5 +44,32 @@
                 </div>
             </div>
         </section>
+        <div class="pagination light-theme">
+            <div class="container">
+                <ul>
+                    <li>
+                        <div class="pagination__btn pagination__prev-btn" href="#">Назад</div>
+                    </li>
+                    <li>
+                        <div class="pagination__num">1</div>
+                    </li>
+                    <li>
+                        <div class="pagination__num">2</div>
+                    </li>
+                    <li>
+                        <div class="pagination__num">3</div>
+                    </li>
+                    <li>
+                        <div class="pagination__more">...</div>
+                    </li>
+                    <li>
+                        <div class="pagination__num">7</div>
+                    </li>
+                    <li>
+                        <div class="pagination__btn pagination__next-btn" href="#">Вперед</div>
+                    </li>
+                </ul> 
+            </div>
+        </div>
 </body>
 </html>
